fixed z-index issue

--- a/banner.css
+++ b/banner.css
@@ -11,6 +11,7 @@
     font-family: "IBM Plex Mono", serif;
     right: 0.3em;
     /* animation: fadein 2s; */
+    z-index: 4;
 }
 
 @keyframes fadein {
